message Request {
  enum Type {
    INFO = 1;
    DOWNLOAD = 2;
    INFO_SINGLE = 3;
  }

  required Type type = 1;
  optional FileInfoRequest info = 2;
  optional FileDownload download = 3;
  optional FileInfoSingleRequest singleInfo = 4;
}

message FileDownload {
  required int64 id = 1;
}

message FileInfoRequest {
    required string name = 1;
}

message FileInfoSingleRequest {
    required int64 id = 1;
}

// response
message Response {
  enum Type {
    INFO = 1;
    DOWNLOAD = 2;
    INFO_SINGLE = 3;
  }

  required Type type = 1;
  repeated FileInfo info = 2;
  optional FileDownload download = 3;
  optional FileInfo singleInfo = 4;
}

message FileInfo {
  required int64 id = 1;
  required string path = 2;
  required int64 size = 3;
  required string mime = 4;
  required string checksum = 5;
  required string createdAt = 6;
  required string updatedAt = 7;
}

message DownloadResponse {
  required bytes data = 1;
  optional bool error = 2;
}
